<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_to_favorites">Add to Favorites</string>

    <string name="add_to_favorites_message">Added to Favorites</string>
    <string name="remove_from_favorites_message">Removed from Favorites</string>

    <!--Preferences Strings Begin-->

    <!--Sort Preference Strings-->
    <string name="sort_preference_key" translatable="false">sort_pref</string>

    <string name="popular_sort_pref_val" translatable="false">popular_sort</string>
    <string name="high_rating_sort_pref_val" translatable="false">high_rating_sort</string>
    <string name="favorites_sort_pref_val" translatable="false">fav_sort</string>

    <string name="popular_sort_pref_label">Sort by Popularity</string>
    <string name="high_rating_sort_pref_label">Sort by Highest Rated</string>
    <string name="favorites_sort_pref_label">Sort by Favorites</string>

    <string name="sort_pref_label">Sort Movies</string>

    <!--Preferences Strings End-->
    
    <!--Movie Data JSON Object Keys Begin-->
    <string name="movie_title_key" translatable="false">original_title</string>
    <string name="movie_poster_url_key" translatable="false">poster_path</string>
    <string name="movie_plot_synopsis_key" translatable="false">overview</string>
    <string name="movie_user_rating_key" translatable="false">vote_average</string>
    <string name="movie_release_date_key" translatable="false">release_date</string>
    <!--Movie Data JSON Object Keys End-->

    <!--Parcelable Data Keys-->
    <string name="movie_data_key" translatable="false">movie_data</string>

    <!--Movie Details Labels Begin-->
    <string name="user_rating_label"><b>Rating:</b></string>
    <string name="user_rating_placeholder">%1$s/10</string>

    <string name="release_date_label"><b>Release Date:</b></string>
    <string name="release_date_placeholder">1970&#8211;01&#8211;01</string>

    <string name="plot_synopsis_label"><b>Plot Synopsis:</b></string>
    <string name="plot_synopsis_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu feugiat pretium nibh ipsum consequat.</string>

    <string name="trailers_label"><b>Trailers:</b></string>
    <string name="trailers_title_placeholder">Title</string>

    <string name="reviews_label"><b>Reviews:</b></string>
    <string name="reviews_author_placeholder">Author</string>
    <string name="reviews_content_placeholder">Content</string>
    <!--Movie Details Labels End-->

    <!-- Movie Data Strings Keys Begin-->
    <string name="movie_trailer_data_key">movie_trailers</string>
    <string name="movie_review_data_key">movie_reviews</string>
    <!-- Movie Data Strings Keys End-->

    <string name="no_network_connection_str">No Network Connection!</string>
    <string name="network_reconnected_str">Back Online!</string>

    <string name="empty_movie_poster_image_view_cont_desc">No Image Found</string>

    <!--Movie Data Results Key-->
    <string name="movie_data_results_key" translatable="false">results</string>

    <string name="share_trailer_chooser_title">Share %1$s</string>

    <!--Image Content Descriptions-->
    <string name="play_button_img_cont_desc">Play Button</string>
    <string name="share_button_img_cont_desc">Share Button</string>
    <string name="movie_poster_img_cont_desc">Movie Poster</string>
    <string name="reviewer_img_cont_desc">Reviewer</string>

</resources>
